--- a/styles/media.css
+++ b/styles/media.css
@@ -219,6 +219,14 @@
     border: 1px solid var(--color-border);
     border-radius: var(--border-radius);
   }
+  .options-container {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    gap: var(--spacing-md);
+  }
 
   /* General input & select styling */
   .options-container select,
@@ -227,8 +235,8 @@
     font: inherit;
     color: var(--textcolor);
     width: 100%; /* allow full width inside container */
-    max-width: 35ch; /* keeps it from growing too large */
-    padding: 0 0.6rem; /* add horizontal breathing room */
+    max-width: 25ch; /* keeps it from growing too large */
+    padding: 0 0; /* add horizontal breathing room */
     box-sizing: border-box;
     box-shadow: var(--box-shadow);
     border: none;
